chatops/deployments/policy/gatekeeper/constraint.naming.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNamingPattern
metadata:
  name: chatops-name-pattern
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["ConfigMap","Secret","Service"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["networking.k8s.io"]
        kinds: ["Ingress"]
  parameters:
    pattern: "^(dev|staging|prod)-[a-z0-9-]+-(deploy|svc|ing|cm|secret)-v\\d+\\.\\d+\\.\\d+(-[A-Za-z0-9]+)?$"
